# ml_algos

./: .gitignore  README.md  pyproject.toml
src/ml_algos/: bagging_boosting.py  classification_test.py  decision_tree_classifier.py  decision_tree_regression.py  linear_regression.py  logistic_regression.py  model.py  multilayer_perceptron.py  neural_network.py  perceptron.py  regression_test.py  svm_classification.py  svm_regression.py
